syntax = "proto3";

package reviews;
option go_package = "github.com/vimsent/proyecto-sd/api/reviews";

// Mensaje para el Reloj Vectorial
message VectorClock {
    map<string, int64> versions = 1;
}

message Review {
    string id = 1;
    string content = 2;
    VectorClock clock = 3;
}

// Request/Response para Escritura (RYW)
message WriteRequest {
    string client_id = 1;
    string content = 2;
}

message WriteResponse {
    string status = 1;
    string assigned_node = 2; // Para debug
}

// Request/Response para Lectura
message ReadRequest {
    string client_id = 1;
    string review_id = 2;
    bool is_monotonic = 3; // Flag para diferenciar tipo de cliente
    VectorClock last_known_clock = 4; // Necesario para Monotonic Reads
}

message ReadResponse {
    string content = 1;
    VectorClock clock = 2;
    string source_node = 3;
}

message ReplicateRequest {
    string review_id = 1;
    string content = 2;
    VectorClock clock = 3;
    string sender_node_id = 4;
}

message ReplicateResponse {
    bool success = 1;
}

// Servicio principal
service ReviewService {
    // Métodos expuestos a Clientes (vía Coordinador)
    rpc SubmitReview(WriteRequest) returns (WriteResponse);
    rpc GetReview(ReadRequest) returns (ReadResponse);

    // Métodos internos (Coordinador <-> Datanode <-> Datanode)
    rpc StoreReview(ReplicateRequest) returns (ReplicateResponse);
    rpc FetchReview(ReadRequest) returns (ReadResponse);
}